GH-23 enable ability to update store locations update README shields for consistency fix tests