@@ -6,11 +6,13 @@ import net.sparkzz.shops.Store;
 import net.sparkzz.util.InventoryManagementSystem;
 import net.sparkzz.util.Notifier;
 import net.sparkzz.util.Notifier.CipherKey;
+import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.Server;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
+import org.bukkit.generator.WorldInfo;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
@@ -55,6 +57,7 @@ public class ShopCommand extends CommandManager {
      * @param args the arguments following the command
      * @return a list of options for the /shop command arguments
      */
+    // TODO: clean up this mess (reconfigure if-blocks/switches to be more efficient and less clunky
     @Override
     @SuppressWarnings("all")
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
@@ -87,8 +90,7 @@ public class ShopCommand extends CommandManager {
 
             // Buy/Remove command autocomplete item list
             if (args[0].equalsIgnoreCase("buy") || args[0].equalsIgnoreCase("remove"))
-                return Arrays.stream(shopItems.toArray())
-                        .map(m -> m.toString().toLowerCase()).collect(Collectors.toList());
+                return shopItems.stream().map(m -> m.toString().toLowerCase()).collect(Collectors.toList());
 
             // provide a list of items witin the shop, along with some additional items based on permissions
             if (args[0].equalsIgnoreCase("update")) {
@@ -127,11 +129,19 @@ public class ShopCommand extends CommandManager {
                 return Collections.singletonList("[<quantity>]");
 
             if (args[0].equalsIgnoreCase("update")) {
-                return switch (args[1].toLowerCase()) {
-                    case "infinite-funds", "infinite-stock" -> List.of("true", "false");
-                    case "shop-name" -> Collections.singletonList("<name>");
-                    default -> List.of("customer-buy-price", "customer-sell-price", "infinite-quantity", "max-quantity");
+                List<String> options;
+
+                switch (args[1].toLowerCase()) {
+                    case "infinite-funds", "infinite-stock" -> options = List.of("true", "false");
+                    case "shop-name" -> options = Collections.singletonList("<name>");
+                    case "location" -> {
+                        options = Store.STORES.stream().filter(s -> s.getOwner().equals(((Player) sender).getUniqueId())).map(s -> String.format("%s~%s", s.getName(), s.getUUID())).collect(Collectors.toCollection(ArrayList::new));
+                        options.addAll(Bukkit.getWorlds().stream().map(WorldInfo::getName).toList());
+                    }
+                    default -> options = List.of("customer-buy-price", "customer-sell-price", "infinite-quantity", "max-quantity");
                 };
+
+                return options;
             }
 
             if (args[0].equalsIgnoreCase("transfer"))
@@ -151,6 +161,23 @@ public class ShopCommand extends CommandManager {
             }
 
             if (args[0].equalsIgnoreCase("update")) {
+                if (args[1].equalsIgnoreCase("location")) {
+                    List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                    List<String> options = Bukkit.getWorlds().stream().map(WorldInfo::getName).collect(Collectors.toList());
+
+                    boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                    boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                    if (containsWorld)
+                        options = Collections.singletonList("x1");
+                    else if (!containsWorld && !containsStore)
+                        options = Collections.singletonList("y1");
+                    else if (!containsStore)
+                        options.add("x1");
+
+                    return options;
+                }
+
                 return switch (args[2].toLowerCase()) {
                     case "infinite-quantity" -> List.of("true", "false");
                     default -> Collections.singletonList("<value>");
@@ -172,6 +199,21 @@ public class ShopCommand extends CommandManager {
                 return Collections.singletonList("<y1>");
             else if (args[0].equalsIgnoreCase("create"))
                 return Collections.singletonList("<z1>");
+
+            if (args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+                List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                List<String> options = Collections.singletonList("x1");
+
+                boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                if (containsWorld && !containsStore)
+                    options = Collections.singletonList("y1");
+                else if (!containsWorld && !containsStore)
+                    options = Collections.singletonList("z1");
+
+                return options;
+            }
         }
 
         if (args.length == 6) {
@@ -183,20 +225,99 @@ public class ShopCommand extends CommandManager {
                 return Collections.singletonList("<z1>");
             else if (args[0].equalsIgnoreCase("create"))
                 return Collections.singletonList("<x2>");
+
+            if (args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+                List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                List<String> options = Collections.singletonList("y1");
+
+                boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                if (containsWorld && !containsStore)
+                    options = Collections.singletonList("z1");
+                else if (!containsWorld && !containsStore)
+                    options = Collections.singletonList("x2");
+
+                return options;
+            }
         }
 
-        if (args.length == 7 && args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
-            return Collections.singletonList("<x2>");
-        else if (args.length == 7 && args[0].equalsIgnoreCase("create"))
-            return Collections.singletonList("<y2>");
+        if (args.length == 7) {
+            if (args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
+                return Collections.singletonList("<x2>");
+            else if (args.length == 7 && args[0].equalsIgnoreCase("create"))
+                return Collections.singletonList("<y2>");
 
-        if (args.length == 8 && args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
-            return Collections.singletonList("<y2>");
-        else if (args.length == 8 && args[0].equalsIgnoreCase("create"))
-            return Collections.singletonList("<z2>");
+            if (args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+                List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                List<String> options = Collections.singletonList("z1");
 
-        if (args.length == 9 && args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
-            return Collections.singletonList("<z2>");
+                boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                if (containsWorld && !containsStore)
+                    options = Collections.singletonList("x2");
+                else if (!containsWorld && !containsStore)
+                    options = Collections.singletonList("y2");
+
+                return options;
+            }
+        }
+
+        if (args.length == 8) {
+            if (args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
+                return Collections.singletonList("<y2>");
+            else if (args[0].equalsIgnoreCase("create"))
+                return Collections.singletonList("<z2>");
+
+            if (args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+                List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                List<String> options = Collections.singletonList("x2");
+
+                boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                if (containsWorld && !containsStore)
+                    options = Collections.singletonList("y2");
+                else if (!containsWorld && !containsStore)
+                    options = Collections.singletonList("z2");
+
+                return options;
+            }
+        }
+
+        if (args.length == 9) {
+            if (args[0].equalsIgnoreCase("create") && server.getPlayer(args[2]) != null)
+                return Collections.singletonList("<z2>");
+
+            if (args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+                List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+                List<String> options = Collections.singletonList("y2");
+
+                boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+                boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+                if (containsWorld && !containsStore)
+                    options = Collections.singletonList("z2");
+                else if (!containsWorld && !containsStore)
+                    options = Collections.emptyList();
+
+                return options;
+            }
+        }
+
+        if (args.length == 10 && args[0].equalsIgnoreCase("update") && args[1].equalsIgnoreCase("location")) {
+            List<String> stores = Store.STORES.stream().map(Store::getName).collect(Collectors.toList());
+            List<String> options = Collections.singletonList("z2");
+
+            boolean containsWorld = Bukkit.getWorlds().stream().map(WorldInfo::getName).anyMatch(w -> w.equalsIgnoreCase(args[2]) || w.equalsIgnoreCase(args[3]));
+            boolean containsStore = stores.stream().anyMatch(s -> s.equalsIgnoreCase(args[2]));
+
+            if ((containsWorld && !containsStore) || (!containsWorld && !containsStore))
+                options = Collections.emptyList();
+
+            return options;
+        }
 
         return new ArrayList<>();
     }
